suil (0.6.14) stable;

  * Print system error message if module fails to load
  * Lower dependency from Gtk 2.24 introduced in 0.6.12
  * Add support for new LV2 idle interface
  * Support resizing for X11 in Gtk (patch from Robin Gareus)
  * Upgrade to waf 1.7.11

 -- David Robillard <d@drobilla.net>  Fri, 09 Aug 2013 00:16:48 -0400

suil (0.6.12) stable;

  * Fix key events for X11 in Gtk without using a troublesome event filter
  * Fix crash when a broken UI returns a NULL descriptor
  * Fix compilation on BSD

 -- David Robillard <d@drobilla.net>  Fri, 22 Feb 2013 13:03:48 -0500

suil (0.6.10) stable;

  * Downgrade to waf 1.7.5, previous version does not build modules due to
    package check breakage in waf 1.7.6

 -- David Robillard <d@drobilla.net>  Sat, 22 Dec 2012 23:08:06 -0500
  
suil (0.6.8) stable;

  * Fix crash in x11_in_gtk2 when event_filter fires before widget is realized
  * Use libgtk-x11-2.0.so.0 (with .0 suffix) by default which is available on
    systems without the dev package
  * Update to waf 1.7.8 and autowaf r90 (install docs to versioned directory)

 -- David Robillard <d@drobilla.net>  Sat, 22 Dec 2012 21:11:23 -0500
  
suil (0.6.6) stable;

  * Fix embedding Gtk in Qt as a child widget (support reparenting)
  * Support for wrapping native Windows UIs in Gtk2
  * Gracefully handle UIs with no port_event method
  * Replace host provided features that match Suil implemented features, rather
    than passing UIs duplicate features
  * Disable timestamps in HTML documentation for reproducible build

 -- David Robillard <d@drobilla.net>  Wed, 14 Nov 2012 11:17:03 -0500

suil (0.6.4) stable;

  * Correctly handle resizing for Gtk2 in Qt4
  * Improve documentation

 -- David Robillard <d@drobilla.net>  Mon, 09 Jul 2012 15:11:06 -0400

suil (0.6.2) stable;

  * Fix crashes when wrapper widget is destroyed by toolkit before
    suil cleanup function is called
  * Link Gtk wrappers with 'nodelete' to avoid Glib type errors