@@ -1,3 +1,9 @@
+suil (0.6.15) unstable;
+
+  * Fix suil_instance_extension_data() for UIs with NULL extension_data
+
+ -- David Robillard <d@drobilla.net>  Fri, 09 Aug 2013 20:41:20 -0400
+
 suil (0.6.14) stable;
 
   * Print system error message if module fails to load
